Fix tdf#82176 CJK: Cursor position, line selection and non-printing

characters do not take account of hanging punctuation. Note that
placing a cursor next to the hanging puncuation is still not possible,
but the selection and the non-printing characters works fine now.

Change-Id: I22c8c2c5044b46c325236caffec67d9f68c23eed