sw/source/core/text/itrcrsr.cxx
@@ -1265,7 +1265,7 @@ sal_Int32 SwTextCursor::GetCrsrOfst( SwPosition *pPos, const Point &rPoint,
     // x is the horizontal offset within the line.
     SwTwips x = rPoint.X();
     const SwTwips nLeftMargin  = GetLineStart();
-    SwTwips nRightMargin = GetLineEnd();
+    SwTwips nRightMargin = GetLineEnd() + GetCurr()->GetHangingMargin();
     if( nRightMargin == nLeftMargin )
         nRightMargin += 30;
 
